# Vulkan-Renderer-Rust

./: Cargo.toml  readme.md  run.bat  run_binned.bat  run_naive.bat  run_no_dgc.bat  rustfmt.toml
VulkanRenderer/: Cargo.toml
VulkanRenderer/src/: application.rs  main.rs
VulkanRenderer/src/application/: assets.rs  input.rs  renderer.rs  rhi.rs  scene.rs
VulkanRenderer/src/application/assets/: AssetManager.rs  asset_traits.rs  material.rs  material_instance.rs  mesh.rs  texture.rs
VulkanRenderer/src/application/renderer/: buffer.rs  device_generated_commands.rs  full_screen_pass.rs  layers.rs  physical_device.rs  pipeline.rs  post_processing.rs  profiling.rs  render_pass.rs  render_sync.rs  rhi_assets.rs  shader_cursor.rs  shader_object.rs  shaders.rs  swapchain.rs  visibility_buffer_data.rs  visibility_buffer_generation.rs  visibility_buffer_shading.rs
VulkanRenderer/src/application/renderer/rhi_assets/: vulkan_camera.rs  vulkan_material.rs  vulkan_material_instance.rs  vulkan_mesh.rs  vulkan_model.rs  vulkan_scene.rs  vulkan_texture.rs
VulkanRenderer/src/application/rhi/: buffer.rs  command_buffer.rs  device_helper.rs  layers.rs  physical_device.rs  pipeline.rs  queue.rs  render_pass.rs  rhi_assets.rs  shader_cursor.rs  shader_object.rs  shaders.rs  swapchain.rs  swapchain_resources.rs
VulkanRenderer/src/application/rhi/rhi_assets/: vulkan_camera.rs  vulkan_material.rs  vulkan_material_instance.rs  vulkan_mesh.rs  vulkan_model.rs  vulkan_scene.rs  vulkan_texture.rs
VulkanRenderer/src/application/scene/: camera.rs  model.rs  transform.rs
src/: main.rs  (+1 more)
(+53 files in other folders)
