[package]
name = "VulkanRenderer"
version = "0.1.0"
edition = "2024"

[dependencies]
vulkano = "0.35.1"
winit = "0.30.12"
#egui = "0.32.0"
egui_winit_vulkano = "0.28.0"
glam = "0.30.5"
shader-slang = "0.1.0"
smallvec = "1.15.1"

[features]
default = ["winit/rwh_06", "glam/bytemuck"]
validation_layers = []
