[package]
name = "VulkanRenderer"
version = "0.1.0"
edition = "2024"

[dependencies]
vulkano = "0.35.2"
winit = "0.30.12"
#egui = "0.32.0"
egui_winit_vulkano = "0.28.0"
glam = "0.31.0"
shader-slang = "0.1.0"
smallvec = "1.15.1"
extend = "1.2.0"
image = "0.25.9"
gltf = "1.4.1"

[features]
default = ["winit/rwh_06", "glam/bytemuck"]
validation_layers = []
