[package]
name = "VulkanRenderer"
version = "0.1.0"
edition = "2024"

[dependencies]
#vulkano = "0.35.2"
vulkano = { git = "https://github.com/Sophlock/vulkano.git", branch = "0.35.X" }
winit = "0.30.12"
#egui = "0.32.0"
egui_winit_vulkano = { git = "https://github.com/Sophlock/egui_winit_vulkano.git" }
#egui_winit_vulkano = "0.28.0"
glam = "0.31.0"
#shader-slang = "0.1.0"
shader-slang = {git = "https://github.com/Sophlock/slang-rs.git"}
smallvec = "1.15.1"
extend = "1.2.0"
image = "0.25.9"
gltf = "1.4.1"
winit-input-map = "0.6.1"
gilrs = "0.11.1"
ash = { version = "0.38.0+1.3.281"}

asset-system = {path = "../asset_system" }

[features]
default = ["winit/rwh_06", "glam/bytemuck"]
validation_layers = []
